update : api 명 변경, 코드 리펙토링 및 모듈화

--- a/loginPage.html
+++ b/loginPage.html
@@ -16,10 +16,12 @@
 
         const getSession = async () =>{
 
+            console.log("123132213131")
+
             const idValue = document.getElementById("idValue")
             const pwValue = document.getElementById("pwValue")
 
-            const getSession = await fetch("/confirmSession",{
+            const getSession = await fetch("/session",{
                 method : "GET"
             })
         
