--- a/postPage.html
+++ b/postPage.html
@@ -18,9 +18,13 @@
 
         const getSession = async () =>{
 
+            console.log("함수 시작")
+
             const getSession = await fetch("/session",{
                 method : "GET"
             })
+
+            console.log("api 호출")
 
             const response = await getSession.json()
             console.log(response)
@@ -79,8 +83,8 @@
                     }
                     
                     deleteBtn.onclick = () => {
-                        console.log(response.posts.postNum)
-                        deletePost(response.posts.postNum)
+                        console.log(response.posts[i].postnum)
+                        deletePost(response.posts[i].postnum)
                     }
 
                     cancelBtn.onclick = () => {
@@ -98,7 +102,7 @@
                         }
                         else{
                             let newpostContents = alterTextArea.value
-                            updatePost(newpostContents,response.postList[i].postNum)
+                            updatePost(newpostContents,response.posts[i].postnum)
                         }
 
                     }
@@ -128,7 +132,7 @@
 
         const deletePost = async (postNum) => {
 
-            const postDelete = await fetch("/post/delete",{
+            const postDelete = await fetch("/post",{
                 "method" : "DELETE",
                 "headers" : {
                     "Content-Type" : "application/json" 
@@ -150,7 +154,7 @@
         
         const updatePost = async (newpostContents, postNum) => {
 
-            const postDelete = await fetch("/post/update",{
+            const postDelete = await fetch("/post",{
                 "method" : "PUT",
                 "headers" : {
                     "Content-Type" : "application/json" 
